implementing site basics

--- a/index.html
+++ b/index.html
@@ -8,11 +8,50 @@
     <meta name="author" content="">
     <title>Vinny Moraes Fotografia</title>
     <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="build/style.css" />
 </head>
 
 <body>
+    <section class="main-container">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="main-container-title">                
+                    Vinny Moraes Fotografia
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 col-sm-offset-6">
+                <div class="main-container-detail">
+                    <div class="main-container-detail-icon display-middle"><i class="fa fa-phone"></i></div>
+                    <div class="main-container-detail-text display-middle">34 99636.8010</div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-9 col-sm-offset-3">
+                <div class="main-container-detail">
+                    <div class="main-container-detail-icon display-middle"><i class="fa fa-envelope"></i></div>
+                    <div class="main-container-detail-text display-middle">hey@vinnymoraes.com</div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-8 col-sm-offset-4">
+                <div class="main-container-detail">
+                    <div class="main-container-detail-icon display-middle"><i class="fa fa-instagram"></i></div>
+                    <div class="main-container-detail-text display-middle">vinnymoraesfotografia</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="slides"></div>
     <script src="build/bundle.js"></script>
+    <footer>
+        Todos os direitos reservados
+    </footer>
 </body>
 
 </html>
