adding copyright, positioning timer

--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
     <div class="slides"></div>
     <script src="build/bundle.js"></script>
     <footer>
-        Todos os direitos reservados
+        <div class="copyright row">
+            <div class="col-sm-6">
+                Copyright <span id="copyright-year"></span> © Vinny Moraes Fotografia | Todos os direitos reservados
+            </div>
+            <div class="col-sm-6 social-media-box">
+                <i class="fa fa-instagram display-middle social-media-box-icon"></i>
+                <i class="fa fa-facebook display-middle social-media-box-icon"></i>
+            </div>
+        </div>
     </footer>
 </body>
 
