implementing 500px https request

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 </head>
 
 <body>
+    <section class="logo-container">
+        <div>
+            <img src="images/logo.png" alt="logo">
+        </div>
+    </section>
     <section class="main-container">
         <div class="row">
             <div class="col-sm-12">
@@ -57,6 +62,8 @@
             <div class="col-sm-6 social-media-box">
                 <i class="fa fa-instagram display-middle social-media-box-icon"></i>
                 <i class="fa fa-facebook display-middle social-media-box-icon"></i>
+                <i class="fa fa-500px display-middle social-media-box-icon"></i>
+                <i class="fa fa-behance display-middle social-media-box-icon"></i>
             </div>
         </div>
     </footer>
